MODROLESKC-332: Cleanup capabilities in roles upon application revocation (#337)
(cherry picked from commit 249e7f7ad7d8db92e7964e766dbf72c096b907f9)